add spacy and tf17

--- a/01_NLP/01_NLP_whit_NLTK.ipynb
+++ b/01_NLP/01_NLP_whit_NLTK.ipynb
@@ -46,17 +46,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/jorge/nltk_data', '/usr/share/nltk_data', '/usr/local/share/nltk_data', '/usr/lib/nltk_data', '/usr/local/lib/nltk_data', '/Users/jorge/anaconda/envs/tm/nltk_data', '/Users/jorge/anaconda/envs/tm/lib/nltk_data']\n"
+      "['/Users/jorge/nltk_data', '/usr/share/nltk_data', '/usr/local/share/nltk_data', '/usr/lib/nltk_data', '/usr/local/lib/nltk_data', '/Users/jorge/anaconda3/nltk_data', '/Users/jorge/anaconda3/lib/nltk_data']\n"
      ]
     }
    ],
    "source": [
     "# The linguistic resources must be instaled in the nltk_data dir.\n",
     "\n",
-    "\n",
     "# Check the nltk_data dir path\n",
-    "print(nltk.data.path)\n",
-    "\n"
+    "print(nltk.data.path)\n"
    ]
   },
   {
@@ -68,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/jorge/nltk_data', '/usr/share/nltk_data', '/usr/local/share/nltk_data', '/usr/lib/nltk_data', '/usr/local/lib/nltk_data', '/Users/jorge/anaconda/envs/tm/nltk_data', '/Users/jorge/anaconda/envs/tm/lib/nltk_data', '/tmp']\n"
+      "['/Users/jorge/nltk_data', '/usr/share/nltk_data', '/usr/local/share/nltk_data', '/usr/lib/nltk_data', '/usr/local/lib/nltk_data', '/Users/jorge/anaconda3/nltk_data', '/Users/jorge/anaconda3/lib/nltk_data', '/tmp']\n"
      ]
     }
    ],
@@ -271,25 +269,25 @@
     {
      "data": {
       "text/plain": [
-       "['czech.pickle',\n",
-       " 'danish.pickle',\n",
-       " 'dutch.pickle',\n",
-       " 'english.pickle',\n",
+       "['greek.pickle',\n",
        " 'estonian.pickle',\n",
-       " 'finnish.pickle',\n",
-       " 'french.pickle',\n",
-       " 'german.pickle',\n",
-       " 'greek.pickle',\n",
-       " 'italian.pickle',\n",
-       " 'norwegian.pickle',\n",
+       " 'turkish.pickle',\n",
        " 'polish.pickle',\n",
-       " 'portuguese.pickle',\n",
        " 'PY3',\n",
+       " 'czech.pickle',\n",
+       " 'portuguese.pickle',\n",
        " 'README',\n",
+       " 'dutch.pickle',\n",
+       " 'norwegian.pickle',\n",
        " 'slovene.pickle',\n",
-       " 'spanish.pickle',\n",
+       " 'english.pickle',\n",
+       " 'danish.pickle',\n",
+       " 'finnish.pickle',\n",
        " 'swedish.pickle',\n",
-       " 'turkish.pickle']"
+       " 'spanish.pickle',\n",
+       " 'german.pickle',\n",
+       " 'italian.pickle',\n",
+       " 'french.pickle']"
       ]
      },
      "execution_count": 10,
@@ -424,7 +422,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available stopwords lists: ['arabic', 'danish', 'dutch', 'english', 'finnish', 'french', 'german', 'hungarian', 'italian', 'kazakh', 'norwegian', 'portuguese', 'romanian', 'russian', 'spanish', 'swedish', 'turkish']\n",
+      "Available stopwords lists: ['arabic', 'azerbaijani', 'danish', 'dutch', 'english', 'finnish', 'french', 'german', 'greek', 'hungarian', 'indonesian', 'italian', 'kazakh', 'nepali', 'norwegian', 'portuguese', 'romanian', 'russian', 'spanish', 'swedish', 'turkish']\n",
       "Stop words spanish: ['de', 'la', 'que', 'el', 'en', 'y', 'a', 'los', 'del', 'se', 'las', 'por', 'un', 'para', 'con', 'no', 'una', 'su', 'al', 'lo', 'como', 'más', 'pero', 'sus', 'le', 'ya', 'o', 'este', 'sí', 'porque', 'esta', 'entre', 'cuando', 'muy', 'sin', 'sobre', 'también', 'me', 'hasta', 'hay', 'donde', 'quien', 'desde', 'todo', 'nos', 'durante', 'todos', 'uno', 'les', 'ni', 'contra', 'otros', 'ese', 'eso', 'ante', 'ellos', 'e', 'esto', 'mí', 'antes', 'algunos', 'qué', 'unos', 'yo', 'otro', 'otras', 'otra', 'él', 'tanto', 'esa', 'estos', 'mucho', 'quienes', 'nada', 'muchos', 'cual', 'poco', 'ella', 'estar', 'estas', 'algunas', 'algo', 'nosotros', 'mi', 'mis', 'tú', 'te', 'ti', 'tu', 'tus', 'ellas', 'nosotras', 'vosostros', 'vosostras', 'os', 'mío', 'mía', 'míos', 'mías', 'tuyo', 'tuya', 'tuyos', 'tuyas', 'suyo', 'suya', 'suyos', 'suyas', 'nuestro', 'nuestra', 'nuestros', 'nuestras', 'vuestro', 'vuestra', 'vuestros', 'vuestras', 'esos', 'esas', 'estoy', 'estás', 'está', 'estamos', 'estáis', 'están', 'esté', 'estés', 'estemos', 'estéis', 'estén', 'estaré', 'estarás', 'estará', 'estaremos', 'estaréis', 'estarán', 'estaría', 'estarías', 'estaríamos', 'estaríais', 'estarían', 'estaba', 'estabas', 'estábamos', 'estabais', 'estaban', 'estuve', 'estuviste', 'estuvo', 'estuvimos', 'estuvisteis', 'estuvieron', 'estuviera', 'estuvieras', 'estuviéramos', 'estuvierais', 'estuvieran', 'estuviese', 'estuvieses', 'estuviésemos', 'estuvieseis', 'estuviesen', 'estando', 'estado', 'estada', 'estados', 'estadas', 'estad', 'he', 'has', 'ha', 'hemos', 'habéis', 'han', 'haya', 'hayas', 'hayamos', 'hayáis', 'hayan', 'habré', 'habrás', 'habrá', 'habremos', 'habréis', 'habrán', 'habría', 'habrías', 'habríamos', 'habríais', 'habrían', 'había', 'habías', 'habíamos', 'habíais', 'habían', 'hube', 'hubiste', 'hubo', 'hubimos', 'hubisteis', 'hubieron', 'hubiera', 'hubieras', 'hubiéramos', 'hubierais', 'hubieran', 'hubiese', 'hubieses', 'hubiésemos', 'hubieseis', 'hubiesen', 'habiendo', 'habido', 'habida', 'habidos', 'habidas', 'soy', 'eres', 'es', 'somos', 'sois', 'son', 'sea', 'seas', 'seamos', 'seáis', 'sean', 'seré', 'serás', 'será', 'seremos', 'seréis', 'serán', 'sería', 'serías', 'seríamos', 'seríais', 'serían', 'era', 'eras', 'éramos', 'erais', 'eran', 'fui', 'fuiste', 'fue', 'fuimos', 'fuisteis', 'fueron', 'fuera', 'fueras', 'fuéramos', 'fuerais', 'fueran', 'fuese', 'fueses', 'fuésemos', 'fueseis', 'fuesen', 'sintiendo', 'sentido', 'sentida', 'sentidos', 'sentidas', 'siente', 'sentid', 'tengo', 'tienes', 'tiene', 'tenemos', 'tenéis', 'tienen', 'tenga', 'tengas', 'tengamos', 'tengáis', 'tengan', 'tendré', 'tendrás', 'tendrá', 'tendremos', 'tendréis', 'tendrán', 'tendría', 'tendrías', 'tendríamos', 'tendríais', 'tendrían', 'tenía', 'tenías', 'teníamos', 'teníais', 'tenían', 'tuve', 'tuviste', 'tuvo', 'tuvimos', 'tuvisteis', 'tuvieron', 'tuviera', 'tuvieras', 'tuviéramos', 'tuvierais', 'tuvieran', 'tuviese', 'tuvieses', 'tuviésemos', 'tuvieseis', 'tuviesen', 'teniendo', 'tenido', 'tenida', 'tenidos', 'tenidas', 'tened']\n"
      ]
     }
@@ -755,194 +753,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stanford NLP tools\n",
-    "\n",
-    "- Provides a POS and a NER taggers for several languages.\n",
-    "\n",
-    "Install instructions in: https://github.com/nltk/nltk/wiki/Installing-Third-Party-Software#stanford-tagger-ner-tokenizer-and-parser \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Start the english server\n",
-    "\n",
-    "cd /Users/jorge/data/training/stanfordNLP/stanford-corenlp-full-2017-06-09\n",
-    "\n",
-    "./start_server.sh\n",
-    "   \n",
-    "   java -mx4g -cp \"*\" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -port 9000 -timeout 15000\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('this', 'DT'),\n",
-       " ('is', 'VBZ'),\n",
-       " ('stanford', 'JJ'),\n",
-       " ('postagger', 'NN'),\n",
-       " ('in', 'IN'),\n",
-       " ('nltk', 'NN'),\n",
-       " ('for', 'IN'),\n",
-       " ('python', 'NN'),\n",
-       " ('user', 'NN'),\n",
-       " ('and', 'CC'),\n",
-       " ('users', 'NNS')]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from nltk.tag.stanford import CoreNLPPOSTagger\n",
-    "\n",
-    "english_postagger = CoreNLPPOSTagger()\n",
-    "\n",
-    "english_postagger.tag('this is stanford postagger in nltk for python user and users'.split())\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Rami', 'PERSON'),\n",
-       " ('Eid', 'PERSON'),\n",
-       " ('is', 'O'),\n",
-       " ('studying', 'O'),\n",
-       " ('at', 'O'),\n",
-       " ('Stony', 'ORGANIZATION'),\n",
-       " ('Brook', 'ORGANIZATION'),\n",
-       " ('University', 'ORGANIZATION'),\n",
-       " ('in', 'O'),\n",
-       " ('New', 'LOCATION'),\n",
-       " ('York', 'LOCATION')]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from nltk.tag.stanford import CoreNLPNERTagger\n",
-    "\n",
-    "english_nertagger = CoreNLPNERTagger()\n",
-    "\n",
-    "english_nertagger.tag(word_tokenize('Rami Eid is studying at Stony Brook University in New York'))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Start the spanish server\n",
-    "\n",
-    "./start_server_spanish.sh\n",
-    "\n",
-    "java -Xmx4g -cp \"*\" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -serverProperties StanfordCoreNLP-spanish.properties -port 9000 -timeout 1$\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('Los', 'da0000'), ('libros', 'nc0p000'), ('le', 'pp000000'), ('cuestan', 'vmip000'), ('3,88', 'z0'), ('€', 'zm'), ('en', 'sp000'), ('Nueva', 'np00000'), ('York', 'np00000'), ('a', 'sp000'), ('Mario', 'np00000'), ('.', 'fp')] \n",
-      "\n",
-      "[('Los', 'O'), ('libros', 'O'), ('le', 'O'), ('cuestan', 'O'), ('3,88', 'O'), ('€', 'O'), ('en', 'O'), ('Nueva', 'LUG'), ('York', 'LUG'), ('a', 'O'), ('Mario', 'PERS'), ('.', 'O')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = 'Los libros le cuestan 3,88€ en Nueva York a Mario.'\n",
-    "\n",
-    "spanish_postagger = CoreNLPPOSTagger()\n",
-    "spanish_nertagger = CoreNLPNERTagger()\n",
-    "\n",
-    "print(spanish_postagger.tag(word_tok.tokenize(text)), '\\n')\n",
-    "\n",
-    "print(spanish_nertagger.tag(word_tok.tokenize(text)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                  ROOT                                                \n",
-      "                                                   |                                                   \n",
-      "                                                sentence                                              \n",
-      "         __________________________________________|________________________________________________   \n",
-      "        |              |         |           |                    sp                                | \n",
-      "        |              |         |           |              ______|_______                          |  \n",
-      "        |              |         |           |             |              sn                        | \n",
-      "        |              |         |           |             |              |                         |  \n",
-      "        |              |         |           |             |           grup.nom                     | \n",
-      "        |              |         |           |             |       _______|____________             |  \n",
-      "        |              |         |           |             |      |       |            sp           | \n",
-      "        |              |         |           |             |      |       |        ____|_____       |  \n",
-      "        sn             sn        |           sn            |      |       |       |          sn     | \n",
-      "   _____|_____         |         |       ____|_____        |      |       |       |          |      |  \n",
-      " spec      grup.nom grup.nom grup.verb spec     grup.nom  prep    |       |      prep     grup.nom  | \n",
-      "  |           |        |         |      |          |       |      |       |       |          |      |  \n",
-      "da0000     nc0p000  pp000000  vmip000   z0         zm    sp000 np00000 np00000  sp000     np00000   fp\n",
-      "  |           |        |         |      |          |       |      |       |       |          |      |  \n",
-      " Los        libros     le     cuestan  3,88        €       en   Nueva    York     a        Mario    . \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Stanford NLP Parsers\n",
-    "from nltk.tag.stanford import CoreNLPParser\n",
-    "\n",
-    "spanish_parser = CoreNLPParser()\n",
-    "\n",
-    "next(spanish_parser.raw_parse(text)).pretty_print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Integrated process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -968,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +838,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1036,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
