--- a/02_text_classification_sklearn/03_sklearn_text_classification_SOLVED.ipynb
+++ b/02_text_classification_sklearn/03_sklearn_text_classification_SOLVED.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn version: 0.19.0\n"
+      "Sklearn version: 0.19.1\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "['alt.atheism', 'comp.graphics', 'sci.med', 'soc.religion.christian']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "(2257, 5000)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "(2257, 5000)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,64 +226,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 1445)\t0.0998496101737\n",
-      "  (0, 2550)\t0.0920875619201\n",
-      "  (0, 2014)\t0.10905059472\n",
-      "  (0, 4869)\t0.112409159775\n",
-      "  (0, 4299)\t0.172232378831\n",
-      "  (0, 3273)\t0.189497984618\n",
-      "  (0, 357)\t0.196147304589\n",
-      "  (0, 3276)\t0.239358101611\n",
-      "  (0, 4744)\t0.242697172074\n",
-      "  (0, 1090)\t0.185367646905\n",
-      "  (0, 2251)\t0.281517460204\n",
-      "  (0, 4520)\t0.239358101611\n",
-      "  (0, 1795)\t0.326673936513\n",
-      "  (0, 2237)\t0.217882788689\n",
-      "  (0, 1865)\t0.182356290661\n",
-      "  (0, 2643)\t0.0944312658437\n",
-      "  (0, 1094)\t0.250397930473\n",
-      "  (0, 2197)\t0.225991796704\n",
-      "  (0, 3385)\t0.272954303671\n",
-      "  (0, 1543)\t0.163780615995\n",
-      "  (0, 3867)\t0.165608347231\n",
-      "  (0, 1123)\t0.157610927262\n",
-      "  (0, 2058)\t0.144807482284\n",
-      "  (0, 4522)\t0.126533637604\n",
-      "  (0, 238)\t0.170069829145\n",
-      "  (0, 2866)\t0.190380209723\n",
-      "  (232, 0)\t0.162673301572\n",
-      "  (272, 0)\t0.0396045882998\n",
-      "  (282, 0)\t0.0830143471237\n",
-      "  (400, 0)\t0.00527736458963\n",
-      "  (433, 0)\t0.00596499373539\n",
-      "  (581, 0)\t0.150704657006\n",
-      "  (588, 0)\t0.154296833105\n",
-      "  (766, 0)\t0.126956846998\n",
-      "  (768, 0)\t0.0117078298784\n",
-      "  (837, 0)\t0.334685959895\n",
-      "  (844, 0)\t0.207167396703\n",
-      "  (859, 0)\t0.216506134034\n",
-      "  (880, 0)\t0.0133502362916\n",
-      "  (1030, 0)\t0.278741714593\n",
-      "  (1056, 0)\t0.212612262278\n",
-      "  (1057, 0)\t0.139865527738\n",
-      "  (1263, 0)\t0.0889107355711\n",
-      "  (1475, 0)\t0.275148224162\n",
-      "  (1665, 0)\t0.22386057664\n",
-      "  (1795, 0)\t0.0911799104224\n",
-      "  (1802, 0)\t0.0165319212251\n",
-      "  (1833, 0)\t0.11551299395\n",
-      "  (1890, 0)\t0.0079616312192\n",
-      "  (2069, 0)\t0.10844175005\n",
-      "  (2144, 0)\t0.114983457384\n"
+      "  (0, 1445)\t0.09984961017366438\n",
+      "  (0, 2550)\t0.09208756192014825\n",
+      "  (0, 2014)\t0.10905059471954383\n",
+      "  (0, 4869)\t0.11240915977454444\n",
+      "  (0, 4299)\t0.17223237883101852\n",
+      "  (0, 3273)\t0.1894979846175662\n",
+      "  (0, 357)\t0.19614730458851817\n",
+      "  (0, 3276)\t0.23935810161052842\n",
+      "  (0, 4744)\t0.2426971720743241\n",
+      "  (0, 1090)\t0.18536764690499014\n",
+      "  (0, 2251)\t0.2815174602044267\n",
+      "  (0, 4520)\t0.23935810161052842\n",
+      "  (0, 1795)\t0.32667393651341364\n",
+      "  (0, 2237)\t0.2178827886891891\n",
+      "  (0, 1865)\t0.1823562906613318\n",
+      "  (0, 2643)\t0.09443126584369482\n",
+      "  (0, 1094)\t0.25039793047338804\n",
+      "  (0, 2197)\t0.22599179670408007\n",
+      "  (0, 3385)\t0.27295430367067186\n",
+      "  (0, 1543)\t0.16378061599510793\n",
+      "  (0, 3867)\t0.16560834723130236\n",
+      "  (0, 1123)\t0.1576109272623592\n",
+      "  (0, 2058)\t0.14480748228447815\n",
+      "  (0, 4522)\t0.12653363760378736\n",
+      "  (0, 238)\t0.17006982914503366\n",
+      "  (0, 2866)\t0.1903802097234869\n",
+      "  (232, 0)\t0.1626733015721039\n",
+      "  (272, 0)\t0.03960458829975349\n",
+      "  (282, 0)\t0.08301434712372262\n",
+      "  (400, 0)\t0.005277364589626779\n",
+      "  (433, 0)\t0.005964993735391251\n",
+      "  (581, 0)\t0.150704657006369\n",
+      "  (588, 0)\t0.1542968331053262\n",
+      "  (766, 0)\t0.1269568469979588\n",
+      "  (768, 0)\t0.011707829878397238\n",
+      "  (837, 0)\t0.334685959895095\n",
+      "  (844, 0)\t0.20716739670250434\n",
+      "  (859, 0)\t0.21650613403417462\n",
+      "  (880, 0)\t0.01335023629162414\n",
+      "  (1030, 0)\t0.27874171459307817\n",
+      "  (1056, 0)\t0.21261226227802443\n",
+      "  (1057, 0)\t0.13986552773816452\n",
+      "  (1263, 0)\t0.08891073557106413\n",
+      "  (1475, 0)\t0.2751482241616676\n",
+      "  (1665, 0)\t0.2238605766396589\n",
+      "  (1795, 0)\t0.09117991042239235\n",
+      "  (1802, 0)\t0.016531921225093872\n",
+      "  (1833, 0)\t0.11551299395013806\n",
+      "  (1890, 0)\t0.007961631219200998\n",
+      "  (2069, 0)\t0.10844175004957458\n",
+      "  (2144, 0)\t0.11498345738389044\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -315,14 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy test:  0.798934753662\n"
+      "Accuracy test:  0.7989347536617842\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -407,9 +407,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
