--- a/02_text_classification_sklearn/02_sklearn_basics_SOLVED.ipynb
+++ b/02_text_classification_sklearn/02_sklearn_basics_SOLVED.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn version: 0.18.1\n"
+      "Sklearn version: 0.19.1\n"
      ]
     }
    ],
@@ -131,16 +131,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5.1  3.5  1.4  0.2]\n",
-      " [ 4.9  3.   1.4  0.2]\n",
-      " [ 4.7  3.2  1.3  0.2]\n",
-      " [ 4.6  3.1  1.5  0.2]\n",
-      " [ 5.   3.6  1.4  0.2]\n",
-      " [ 5.4  3.9  1.7  0.4]\n",
-      " [ 4.6  3.4  1.4  0.3]\n",
-      " [ 5.   3.4  1.5  0.2]\n",
-      " [ 4.4  2.9  1.4  0.2]\n",
-      " [ 4.9  3.1  1.5  0.1]]\n",
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]\n",
+      " [5.4 3.9 1.7 0.4]\n",
+      " [4.6 3.4 1.4 0.3]\n",
+      " [5.  3.4 1.5 0.2]\n",
+      " [4.4 2.9 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.1]]\n",
       "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
       " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
       " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
@@ -278,9 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Test another clasifier\n",
     "   - Based on the [Sklearn algorithm cheat-sheet](http://scikit-learn.org/stable/tutorial/machine_learning_map/)\n",
@@ -328,18 +326,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  2.43289285e-05   4.36928609e-01   5.63047062e-01]\n",
-      " [  1.19671489e-03   3.16095051e-01   6.82708234e-01]\n",
-      " [  4.61332864e-03   3.56328255e-01   6.39058416e-01]\n",
-      " [  8.59151061e-01   1.40807092e-01   4.18472484e-05]\n",
-      " [  2.11461639e-02   7.24592757e-01   2.54261079e-01]]\n",
+      "[[2.43289285e-05 4.36928609e-01 5.63047062e-01]\n",
+      " [1.19671489e-03 3.16095051e-01 6.82708234e-01]\n",
+      " [4.61332864e-03 3.56328255e-01 6.39058416e-01]\n",
+      " [8.59151061e-01 1.40807092e-01 4.18472484e-05]\n",
+      " [2.11461639e-02 7.24592757e-01 2.54261079e-01]]\n",
       "Test classes:  [0 1 2]\n",
       "[[0 0 1]\n",
       " [0 0 1]\n",
       " [0 0 1]\n",
       " [1 0 0]\n",
       " [0 1 0]]\n",
-      "Average ROC area:  0.975555555556\n"
+      "Average ROC area:  0.9755555555555556\n"
      ]
     }
    ],
@@ -379,7 +377,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -393,9 +391,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
