--- a/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
+++ b/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
@@ -67,7 +67,9 @@
     "\n",
     "text_clf = Pipeline([('vect', CountVect...),\n",
     "                     ('tfidf', TfidfTran...),\n",
+    "# ---------------------------------------------\n",
     "                     ('clf', ...),\n",
+    "# ---------------------------------------------\n",
     "                    ])\n",
     "\n",
     "# Fit all the pipeline\n",
@@ -114,7 +116,9 @@
     "from sklearn.svm import LinearSVC\n",
     "text_clf_svm = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=5000, stop_words='english')),\n",
     "                     ('tfidf', TfidfTransformer()),\n",
+    "# ---------------------------------------------\n",
     "                     ('clf', ...),\n",
+    "# ---------------------------------------------\n",
     "                    ])\n",
     "\n",
     "#Fit\n",
@@ -139,7 +143,9 @@
     "\n",
     "text_clf = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=5000, stop_words='english')),\n",
     "                     ('tfidf', TfidfTransformer()),\n",
+    "# ---------------------------------------------\n",
     "                     ('clf', ...),\n",
+    "# ---------------------------------------------\n",
     "                    ])\n",
     "\n",
     "_ = text_clf.fit(twenty_train.data, twenty_train.target)\n",
@@ -159,7 +165,9 @@
     "\n",
     "text_clf = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=5000, stop_words='english')),\n",
     "                     ('tfidf', TfidfTransformer()),\n",
+    "# ---------------------------------------------\n",
     "                     ('clf', ...),\n",
+    "# ---------------------------------------------\n",
     "                    ])\n",
     "\n",
     "_ = text_clf.fit(twenty_train.data, twenty_train.target)\n",
@@ -267,10 +275,12 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
+    "# ---------------------------------------------\n",
     "text_lda_knn = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=10000, stop_words='english')),\n",
-    "                         ('lda', ...,\n",
+    "                         ('lda', ...),\n",
     "                         ('clf', ...)\n",
     "                        ])\n",
+    "# ---------------------------------------------\n",
     "\n",
     "                         \n",
     "_ = text_lda_knn.fit(twenty_train.data, twenty_train.target)\n",
@@ -288,10 +298,12 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "# ---------------------------------------------\n",
     "text_lda_rf = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=10000, stop_words='english')),\n",
-    "                         ('lda', ...,\n",
+    "                         ('lda', ...),\n",
     "                         ('clf', ...),\n",
     "                        ])\n",
+    "# ---------------------------------------------\n",
     "\n",
     "                         \n",
     "_ = text_lda_rf.fit(twenty_train.data, twenty_train.target)\n",
@@ -327,16 +339,20 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "# Define estimator. No parameters of the search\n",
+    "# ---------------------------------------------\n",
     "clf = Pipeline([('vect', ...),\n",
     "                ('tfidf', ...), # tf-idf\n",
     "                ('clf', ...), # LinearSVC\n",
     "                ])\n",
+    "# ---------------------------------------------\n",
     "\n",
     "# Specify parameters and distributions to sample from\n",
     "# Parameters of pipelines can be set using ‘__’ separated parameter names:\n",
+    "# ---------------------------------------------\n",
     "param_dist = {\"vect__max_features\": ..., \n",
     "              \"vect__stop_words\": ..., \n",
     "              \"clf__C\": ...}\n",
+    "# ---------------------------------------------\n",
     "\n",
     "# Define randomized search\n",
     "n_iter_search = 10\n",
@@ -384,7 +400,9 @@
    "source": [
     "# Score & evaluate test data using the best estimator\n",
     "\n",
+    "# ---------------------------------------------\n",
     "predicted = random_search...(twenty_test.data)\n",
+    "# ---------------------------------------------\n",
     "\n",
     "print('Test accuracy:', np.mean(predicted == twenty_test.target))"
    ]
@@ -435,7 +453,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -449,9 +467,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
