--- a/04_RNN/word_tagging/00_identify_tags_in_airline_database_embedings - EXERCISE.ipynb
+++ b/04_RNN/word_tagging/00_identify_tags_in_airline_database_embedings - EXERCISE.ipynb
@@ -37,9 +37,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# plt configuration\n",
-    "plt.rcParams['figure.figsize'] = (10, 10)        # size of images\n",
-    "plt.rcParams['image.interpolation'] = 'nearest'  # show exact image\n",
-    "plt.rcParams['image.cmap'] = 'gray'  # use grayscale "
+    "plt.rcParams['figure.figsize'] = (10, 10)\n"
    ]
   },
   {
@@ -256,11 +254,8 @@
    "outputs": [],
    "source": [
     "# build the model: Simple LSTM with embedings\n",
-    "\n",
-    "from tensorflow.contrib.keras import layers, models, optimizers\n",
-    "\n",
     "print('Build model 1')\n",
-    "seq_input = layers.Input(shape=([input_seq_length]), name='prev') \n",
+    "seq_input = tf.keras.layers.Input(shape=([input_seq_length]), name='prev') \n",
     "\n",
     "#----------------------------------------\n",
     "# Put your embedding layer here\n",
@@ -275,11 +270,11 @@
     "#----------------------------------------\n",
     "output = \n",
     "\n",
-    "model1 = models.Model(inputs=seq_input, outputs=output)\n",
+    "model1 = tf.keras.models.Model(inputs=seq_input, outputs=output)\n",
     "model1.summary()\n",
     "\n",
     "# Optimizer\n",
-    "adam_optimizer = optimizers.Adam()\n",
+    "adam_optimizer = tf.keras.optimizers.Adam()\n",
     "model1.compile(loss='sparse_categorical_crossentropy', optimizer=adam_optimizer, metrics=['accuracy'])\n"
    ]
   },
@@ -289,23 +284,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Plot the model graph\n",
-    "from tensorflow.contrib.keras import utils\n",
-    "\n",
-    "# Create model image\n",
-    "utils.plot_model(model1, '/tmp/model1.png')\n",
-    "\n",
-    "# Show image\n",
-    "plt.imshow(plt.imread('/tmp/model1.png'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Fit model\n",
+    "tb_callback = tf.keras.callbacks.TensorBoard(log_dir=LOG_DIR)\n",
+    "\n",
     "history = model1.fit(X_trn, y_trn, batch_size=128, epochs=10,\n",
     "           validation_data=(X_tst, y_tst))\n"
    ]
@@ -317,6 +298,8 @@
    "outputs": [],
    "source": [
     "#Plot graphs in the notebook output\n",
+    "plt.rcParams['figure.figsize'] = (10, 10)\n",
+    "\n",
     "plt.plot(history.history['acc'])\n",
     "plt.plot(history.history['val_acc'])\n",
     "plt.show()"
@@ -354,7 +337,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -368,9 +351,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
