--- a/04_RNN/word_tagging/01_identify_tags_in_airline_database_LSTM - EXERCISE.ipynb
+++ b/04_RNN/word_tagging/01_identify_tags_in_airline_database_LSTM - EXERCISE.ipynb
@@ -25,16 +25,12 @@
     "import tensorflow as tf \n",
     "print(tf.__version__)\n",
     "\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "\n",
     "#Show images\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# plt configuration\n",
-    "plt.rcParams['figure.figsize'] = (10, 10)        # size of images\n",
-    "plt.rcParams['image.interpolation'] = 'nearest'  # show exact image\n",
-    "plt.rcParams['image.cmap'] = 'gray'  # use grayscale "
+    "plt.rcParams['figure.figsize'] = (10, 10) \n"
    ]
   },
   {
@@ -53,8 +49,7 @@
     "# Read data\n",
     "import pickle\n",
     "\n",
-    "atis_file = '/Users/jorge/data/training/text/atis/atis.pkl'\n",
-    "#atis_file = '/home/ubuntu/data/training/text/atis/atis.pkl'\n",
+    "atis_file = '../../data/atis/atis.pkl'\n",
     "\n",
     "with open(atis_file,'rb') as f:\n",
     "    if sys.version_info.major==2:\n",
@@ -146,21 +141,19 @@
    "source": [
     "# build the model: Simple LSTM with embedings\n",
     "\n",
-    "from tensorflow.contrib.keras import layers, models, optimizers\n",
-    "\n",
     "print('Build model 1')\n",
-    "seq_input = layers.Input(shape=([input_seq_length]), name='prev') \n",
+    "seq_input = tf.keras.layers.Input(shape=([input_seq_length]), name='prev') \n",
     "    \n",
     "#----------------------------------------\n",
     "# Put your embeding + LSTM + dense model here\n",
     "#----------------------------------------\n",
     "\n",
     "\n",
-    "model1 = models.Model(inputs=seq_input, outputs=output)\n",
+    "model1 = tf.keras.models.Model(inputs=seq_input, outputs=output)\n",
     "model1.summary()\n",
     "\n",
     "# Optimizer\n",
-    "adam_optimizer = optimizers.Adam()\n",
+    "adam_optimizer = tf.keras.optimizers.Adam()\n",
     "model1.compile(loss='sparse_categorical_crossentropy', optimizer=adam_optimizer, metrics=['accuracy'])\n"
    ]
   },
@@ -170,25 +163,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Plot the model graph\n",
-    "from tensorflow.contrib.keras import utils\n",
-    "\n",
-    "# Create model image\n",
-    "utils.plot_model(model1, '/tmp/model1.png')\n",
-    "\n",
-    "# Show image\n",
-    "plt.imshow(plt.imread('/tmp/model1.png'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Fit model\n",
+    "tb_callback = tf.keras.callbacks.TensorBoard(log_dir='../../data/tensorboard/airline/LSTM/')\n",
+    "\n",
     "history = model1.fit(X_trn, y_trn, batch_size=128, epochs=20,\n",
-    "           validation_data=(X_tst, y_tst))\n"
+    "           validation_data=(X_tst, y_tst), callbacks=[tb_callback])\n"
    ]
   },
   {
@@ -198,6 +177,8 @@
    "outputs": [],
    "source": [
     "#Plot graphs in the notebook output\n",
+    "plt.rcParams['figure.figsize'] = (10, 10) \n",
+    "\n",
     "plt.plot(history.history['acc'])\n",
     "plt.plot(history.history['val_acc'])\n",
     "plt.show()"
@@ -240,9 +221,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:tm]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tm-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -254,9 +235,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
