--- a/04_RNN/word_tagging/identify_tags_in_airline_database_visualize_embeddings - SOLVED.ipynb
+++ b/04_RNN/word_tagging/identify_tags_in_airline_database_visualize_embeddings - SOLVED.ipynb
@@ -16,10 +16,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jorge/anaconda3/envs/tm/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3.0\n"
+      "1.7.0\n"
      ]
     }
    ],
@@ -33,9 +41,7 @@
     "import tensorflow as tf \n",
     "\n",
     "print(tf.__version__)\n",
-    "\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n"
+    "\n"
    ]
   },
   {
@@ -69,8 +75,7 @@
     "import pickle\n",
     "import sys\n",
     "\n",
-    "atis_file = '/Users/jorge/data/training/text/atis/atis.pkl'\n",
-    "#atis_file = '/home/ubuntu/data/training/text/atis/atis.pkl'\n",
+    "atis_file = '../../data/atis/atis.pkl'\n",
     "\n",
     "with open(atis_file,'rb') as f:\n",
     "    if sys.version_info.major==2:\n",
@@ -153,7 +158,7 @@
    "outputs": [],
    "source": [
     "#General parameters\n",
-    "LOG_DIR = '/tmp/tensorboard/airline/embeddings_visualize'\n",
+    "LOG_DIR = '../../data/tensorboard/airline/embeddings_visualize'\n",
     "\n",
     "# data attributes\n",
     "input_seq_length = X_trn.shape[1]\n",
@@ -172,17 +177,26 @@
    "outputs": [],
    "source": [
     "# Save words and labels for embedding visualization\n",
-    "if not os.path.exists(LOG_DIR + '/train'):\n",
-    "    os.makedirs(LOG_DIR + '/train')\n",
+    "if not os.path.exists(os.path.join(LOG_DIR, 'train')):\n",
+    "    os.makedirs(os.path.join(LOG_DIR, 'train'))\n",
     "    \n",
-    "with open( LOG_DIR + '/train/records.tsv', \"w\") as record_file:\n",
+    "with open(os.path.join(LOG_DIR, 'train', 'records.tsv'), \"w\") as record_file:\n",
     "    for item in idx2w.items():\n",
     "        if sys.version_info.major==2:\n",
     "            record_file.write(item[1].encode('utf-8')+'\\n') #python2.7\n",
     "        else:\n",
     "            record_file.write(item[1].decode('ascii')+'\\n') #python3\n",
-    "\n"
+    "    record_file.write('z\\n')\n",
+    "\n",
+    "records_path = os.path.abspath(os.path.join(LOG_DIR, 'train', 'records.tsv'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -193,8 +207,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From /Users/jorge/anaconda3/envs/tm/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the retry module or similar alternatives.\n",
       "embedding_layer:  Tensor(\"Embeddings/embedding_lookup:0\", shape=(?, 10, 64), dtype=float32)\n",
-      "lstm_outputs:  Tensor(\"RNN/rnn/transpose:0\", shape=(?, 10, 128), dtype=float32)\n",
+      "lstm_outputs:  Tensor(\"RNN/rnn/transpose_1:0\", shape=(?, 10, 128), dtype=float32)\n",
       "dense_output:  Tensor(\"Dense/Relu:0\", shape=(?, 127), dtype=float32)\n",
       "INFO:tensorflow:Summary name cross entropy is illegal; using cross_entropy instead.\n"
      ]
@@ -329,27 +346,27 @@
      "text": [
       "Initializing\n",
       "Epoch - Loss(trn) -  Acc(trn)   -   Loss(tst) -   Acc(tst)\n",
-      "0   -   1.88426   -   0.624859   -   1.48127   -   0.639063\n",
-      "1   -   1.1501   -   0.734393   -   0.993698   -   0.776339\n",
-      "2   -   0.742226   -   0.838677   -   0.700121   -   0.859933\n",
-      "3   -   0.516123   -   0.893754   -   0.524776   -   0.898214\n",
-      "4   -   0.392815   -   0.923802   -   0.426208   -   0.915625\n",
-      "5   -   0.315562   -   0.939126   -   0.362418   -   0.929018\n",
-      "6   -   0.262767   -   0.949431   -   0.317352   -   0.939062\n",
-      "7   -   0.223851   -   0.956289   -   0.295831   -   0.942411\n",
-      "8   -   0.195494   -   0.962263   -   0.277158   -   0.947656\n",
-      "9   -   0.176294   -   0.965887   -   0.25266   -   0.95346\n",
-      "10   -   0.154347   -   0.971048   -   0.244611   -   0.955357\n",
-      "11   -   0.13798   -   0.974194   -   0.235389   -   0.958817\n",
-      "12   -   0.117346   -   0.978171   -   0.236625   -   0.957701\n",
-      "13   -   0.111228   -   0.978966   -   0.21706   -   0.960938\n",
-      "14   -   0.104719   -   0.980363   -   0.218144   -   0.962835\n",
-      "15   -   0.0978412   -   0.981741   -   0.215232   -   0.96183\n",
-      "16   -   0.0943131   -   0.981918   -   0.201253   -   0.965179\n",
-      "17   -   0.0895753   -   0.982554   -   0.242419   -   0.954911\n",
-      "18   -   0.0861439   -   0.98289   -   0.211911   -   0.963728\n",
-      "19   -   0.0797447   -   0.984393   -   0.208078   -   0.966071\n",
-      "Time to train: 233.75429511070251\n"
+      "0   -   1.8736353   -   0.6301258   -   1.4640127   -   0.66272324\n",
+      "1   -   1.1327195   -   0.7434071   -   0.98812604   -   0.77845985\n",
+      "2   -   0.7392341   -   0.83791715   -   0.67924255   -   0.86473215\n",
+      "3   -   0.51914227   -   0.8889282   -   0.51637167   -   0.90122765\n",
+      "4   -   0.3900575   -   0.92125636   -   0.43332055   -   0.9175223\n",
+      "5   -   0.31177056   -   0.9367223   -   0.36246315   -   0.92756695\n",
+      "6   -   0.25744435   -   0.9494132   -   0.3100823   -   0.94140625\n",
+      "7   -   0.2215897   -   0.95736706   -   0.28388372   -   0.94486606\n",
+      "8   -   0.19291957   -   0.9641014   -   0.2757721   -   0.9483259\n",
+      "9   -   0.17172964   -   0.96804297   -   0.26503608   -   0.9513393\n",
+      "10   -   0.156705   -   0.9715074   -   0.24986465   -   0.95390624\n",
+      "11   -   0.14587137   -   0.97410566   -   0.24739489   -   0.95524555\n",
+      "12   -   0.13360824   -   0.9757848   -   0.24257243   -   0.9574777\n",
+      "13   -   0.1281536   -   0.9767039   -   0.24229467   -   0.95714283\n",
+      "14   -   0.1207182   -   0.9785598   -   0.24465242   -   0.95814735\n",
+      "15   -   0.115941316   -   0.978984   -   0.2357455   -   0.9594866\n",
+      "16   -   0.11141064   -   0.97937286   -   0.23080929   -   0.9608259\n",
+      "17   -   0.10347678   -   0.9814232   -   0.24120764   -   0.96026784\n",
+      "18   -   0.09838853   -   0.98174137   -   0.25252542   -   0.95591515\n",
+      "19   -   0.09896143   -   0.9816883   -   0.23494266   -   0.9621652\n",
+      "Time to train: 178.84828996658325\n"
      ]
     }
    ],
@@ -366,8 +383,8 @@
     "with tf.Session(graph=graph, config=tf.ConfigProto(gpu_options=gpu_options)) as session:\n",
     "\n",
     "    #Create sumaries writers\n",
-    "    train_writer = tf.summary.FileWriter(LOG_DIR + '/train', session.graph, flush_secs=2)\n",
-    "    test_writer  = tf.summary.FileWriter(LOG_DIR + '/test', flush_secs=2)\n",
+    "    train_writer = tf.summary.FileWriter(os.path.join(LOG_DIR, 'train'), session.graph, flush_secs=2)\n",
+    "    test_writer  = tf.summary.FileWriter(os.path.join(LOG_DIR, 'test'), flush_secs=2)\n",
     "\n",
     "    \n",
     "    # Define the embeddings in tensorboard\n",
@@ -377,7 +394,7 @@
     "    # Link to the embeddings tensor\n",
     "    embedding.tensor_name = W_embedding.name\n",
     "    # Link this tensor to its metadata file (e.g. labels).\n",
-    "    embedding.metadata_path = LOG_DIR + '/train/records.tsv'\n",
+    "    embedding.metadata_path = records_path\n",
     "    # Saves a configuration file that TensorBoard will read during startup.\n",
     "    projector.visualize_embeddings(train_writer, config)\n",
     "\n",
@@ -405,13 +422,14 @@
     "            ce_c_tst += [ce_tst]\n",
     "            acc_c_tst += [acc_tst]\n",
     "            \n",
-    "        saver.save(session, LOG_DIR + \"/train/model.ckpt\", epoch)\n",
+    "        saver.save(session, os.path.join(LOG_DIR, 'train', 'model.ckpt'), epoch)\n",
     "        \n",
     "        print(epoch, np.mean(ce_c), np.mean(acc_c), np.mean(ce_c_tst), np.mean(acc_c_tst), sep='   -   ')\n",
     "print('Time to train:', time.time() - start)\n",
-    "# 235 secs in CPU i7 Mac\n",
-    "# 121 secs in GPU GT750\n",
-    "# 61 secs in GPU titan X"
+    "# 235 secs in CPU i7 Mac tf 1.2\n",
+    "# 121 secs in GPU GT750 tf 1.2\n",
+    "# 61  secs in GPU titan X tf 1.2\n",
+    "# 180 secs in CPU i7 Mac tf 1.7"
    ]
   },
   {
@@ -427,9 +445,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:tm]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tm-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -441,9 +459,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
